--- a/storage/api/Dockerfile
+++ b/storage/api/Dockerfile
@@ -3,7 +3,7 @@ FROM golang:alpine AS builder
 WORKDIR /build
 ADD go.mod .
 COPY .. .
-RUN go build -o app main.go
+RUN go build -o app
 
 FROM alpine
 
